fixed contact btn visibility

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ code {
 .home-page-heading {
   padding-top: 1.5em;
   padding-bottom: 1em;
-  color:rgb(130, 130, 130);
+  color:rgb(199, 199, 199);
 }
 
 .sample-anim {
